codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: terminal_title_popup_snapshot(&mut chat)
---
  Configure Terminal Title
  Select which items to display in the terminal title.

  Type to search

› [x] monthly-limit  Remaining usage on the monthly usage limit (omitted when unavailable)
  [x] weekly-limit   Remaining usage on the weekly usage limit (omitted when unavailable)
  [ ] app-name       Application name
  [ ] project-name   Project name (falls back to current directory name)
  [ ] current-dir    Current working directory
  [ ] activity       Spinner while working, action-required message while blocked.
  [ ] run-state      Compact session run-state text (Ready, Working, Thinking)
  [ ] thread-name    Current thread name (omitted when unnamed)
↓
  monthly 65% left | weekly 50% left
  space toggle · ←/→ reorder · enter save · esc cancel
